--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 body {
   background-color: rgb(0, 0, 0);
-  display: flex; /* No scroll bars */
-  margin: 0; /* Canvas takes up entire screen */
+  display: flex;
+  margin: 0;
 }
 
 canvas {
-  overflow: hidden; /* No scroll bars */
+  overflow: hidden;
 }
